some validation and alert added

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.pratanu.ToDoApplication"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "0426a6ca-6f34-4d02-b8e6-ed30a7c7c106"
+      }
     }
   }
 }
